Add more content sections to homepage

--- a/index.html
+++ b/index.html
@@ -11,24 +11,74 @@
         <h1>Welcome to Home Church</h1>
         <nav>
             <ul>
+                <li><a href="#welcome">Welcome</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#schedule">Schedule</a></li>
+                <li><a href="#beliefs">Beliefs</a></li>
+                <li><a href="#events">Events</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#prayer">Prayer</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
+        <section id="welcome">
+            <h2>Welcome Message</h2>
+            <p>Our mission is to create a warm, inclusive community where we can grow together in faith, support one another, and share God's love with those around us.</p>
+        </section>
+        
         <section id="about">
             <h2>About Us</h2>
-            <p>Welcome to our home church community. We are a group of believers dedicated to growing together in faith.</p>
+            <p>Welcome to our home church community. We are a group of believers dedicated to growing together in faith, meeting in homes just as the early church did.</p>
         </section>
-        <section id="schedule">
-            <h2>Meeting Schedule</h2>
-            <p>We meet every Sunday at 10:00 AM</p>
+
+        <section id="beliefs">
+            <h2>Our Beliefs & Values</h2>
+            <ul>
+                <li>We believe in the authority and inerrancy of Scripture</li>
+                <li>We value authentic community and relationships</li>
+                <li>We emphasize practical application of biblical teachings</li>
+                <li>We encourage active participation and discussion</li>
+            </ul>
         </section>
+
+        <section id="events">
+            <h2>Upcoming Events</h2>
+            <div class="event">
+                <h3>Sunday Worship</h3>
+                <p>Every Sunday at 10:00 AM</p>
+            </div>
+            <div class="event">
+                <h3>Bible Study</h3>
+                <p>Wednesdays at 7:00 PM</p>
+            </div>
+        </section>
+
+        <section id="testimonials">
+            <h2>Community Testimonials</h2>
+            <div class="testimonial">
+                <p>"This community has become like family to me. The intimate setting allows for deep discussions and real relationships."</p>
+                <cite>- Sarah M.</cite>
+            </div>
+            <div class="testimonial">
+                <p>"I love how we can openly discuss and apply God's word to our daily lives."</p>
+                <cite>- John D.</cite>
+            </div>
+        </section>
+
+        <section id="prayer">
+            <h2>Prayer Requests</h2>
+            <p>We believe in the power of prayer. Share your prayer requests with our community, and we will pray for you.</p>
+            <form id="prayer-form">
+                <textarea placeholder="Your prayer request (optional)"></textarea>
+                <button type="submit">Submit Prayer Request</button>
+            </form>
+        </section>
+
         <section id="contact">
             <h2>Contact Us</h2>
             <p>Join us for our next meeting or reach out for more information.</p>
+            <p>Email: contact@homechurch.example.com</p>
         </section>
     </main>
     <footer>
